Team info update

--- a/team.html
+++ b/team.html
@@ -64,7 +64,7 @@
                     <div class="team-member-details">
                         <div class="team-member-info">
                             <h4 class="name">Christian A</h4>
-                            <p class="hobbies"><span>Hobbies: </span>Sleeping, Listening to music, Thinking, Writing poems and creative pieces</p>
+                            <p class="hobbies"><span>Hobbies: </span>Sleeping, Listening to music, Reading novels, Thinking, Writing poems and creative pieces</p>
                             <p class="fav-genre"><span>Favourite genre: </span> Rap (I guess)</p>
                             <p class="fav-artist"><span>Favourite artist: </span> None</p>
                         </div>
