A few more changes in styles

--- a/playlists.html
+++ b/playlists.html
@@ -16,9 +16,9 @@
     <div class="body">
         <header>
             <nav class="navigation">
-                <div class="logo">
+                <a href="./index.html" class="logo">
                     <p>Opus Sessions</p>
-                </div>
+                </a>
                 <ul class="desktop-menu">
                     <li class="desktop-menu-item"><a href="./index.html">Home</a></li>
                     <li class="desktop-menu-item"><a href="./playlists.html">Playlists</a></li>
