SEO and accessibility fix

--- a/team.html
+++ b/team.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="The Opus Sessions show is the IGTV series where we dicuss music and try to catch cruise while doing it">
+    <meta name="keywords" content="Opus Sessions, The Opus Sessions show,Opus Sessions, Opus Sessions IGTV">
+    <meta name="author" content="5T4N5">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
@@ -37,7 +40,10 @@
             <section class="team">
                 <div class="team-member">
                     <div class="member-icon">
-                        <img src="https://res.cloudinary.com/ecx/image/upload/ar_1:1,bo_0px_solid_rgb:ff0000,c_fill,g_auto,r_max,w_1000/v1604914360/Opus/Team/IMG_5999_mayjfk.webp" alt="team member icon">
+                        <img 
+                            src="https://res.cloudinary.com/ecx/image/upload/ar_1:1,bo_0px_solid_rgb:ff0000,c_fill,g_auto,r_max,w_1000/v1604914360/Opus/Team/IMG_5999_mayjfk.webp" 
+                            srcset="https://res.cloudinary.com/ecx/image/upload/ar_1:1,bo_0px_solid_rgb:ff0000,c_fill,g_auto,r_max,w_1000/v1604914360/Opus/Team/IMG_5999_mayjfk.jpg"
+                            alt="team member icon">
                     </div>
                     <div class="team-member-details">
                         <div class="team-member-info">
@@ -59,7 +65,10 @@
                 </div>
                 <div class="team-member">
                     <div class="member-icon">
-                        <img src="https://res.cloudinary.com/ecx/image/upload/ar_1:1,c_fill,g_auto,r_max,w_1000/v1604914379/Opus/Team/IMG_5959_q6zbuy.webp" alt="team member icon">
+                        <img 
+                            src="https://res.cloudinary.com/ecx/image/upload/ar_1:1,c_fill,g_auto,r_max,w_1000/v1604914379/Opus/Team/IMG_5959_q6zbuy.webp" 
+                            srcset="https://res.cloudinary.com/ecx/image/upload/ar_1:1,c_fill,g_auto,r_max,w_1000/v1604914379/Opus/Team/IMG_5959_q6zbuy.jpg" 
+                            alt="team member icon">
                     </div>
                     <div class="team-member-details">
                         <div class="team-member-info">
@@ -81,7 +90,10 @@
                 </div>
                 <div class="team-member">
                     <div class="member-icon">
-                        <img src="https://res.cloudinary.com/ecx/image/upload/ar_1:1,bo_0px_solid_rgb:ff0000,c_fill,g_auto,r_max,w_1000/v1604914379/Opus/Team/IMG_3080_cfptrs.webp" alt="team member icon">
+                        <img 
+                            src="https://res.cloudinary.com/ecx/image/upload/ar_1:1,bo_0px_solid_rgb:ff0000,c_fill,g_auto,r_max,w_1000/v1604914379/Opus/Team/IMG_3080_cfptrs.webp" 
+                            srcset="https://res.cloudinary.com/ecx/image/upload/ar_1:1,bo_0px_solid_rgb:ff0000,c_fill,g_auto,r_max,w_1000/v1604914379/Opus/Team/IMG_3080_cfptrs.jpg" 
+                            alt="team member icon">
                     </div>
                     <div class="team-member-details">
                         <div class="team-member-info">
@@ -104,7 +116,10 @@
                 </div>
                 <div class="team-member">
                     <div class="member-icon">
-                        <img src="https://res.cloudinary.com/ecx/image/upload/ar_1:1,c_fill,g_auto,r_max,w_1000/v1604943610/Opus/Team/t_vcz6bb.webp" alt="team member icon">
+                        <img 
+                        src="https://res.cloudinary.com/ecx/image/upload/ar_1:1,c_fill,g_auto,r_max,w_1000/v1604943610/Opus/Team/t_vcz6bb.webp"
+                        srcset="https://res.cloudinary.com/ecx/image/upload/ar_1:1,c_fill,g_auto,r_max,w_1000/v1604943610/Opus/Team/t_vcz6bb.jpg"
+                        alt="team member icon">
                     </div>
                     <div class="team-member-details">
                         <div class="team-member-info">
@@ -126,7 +141,10 @@
                 </div>
                 <div class="team-member">
                     <div class="member-icon">
-                        <img src="https://res.cloudinary.com/ecx/image/upload/ar_1:1,bo_0px_solid_rgb:ff0000,c_fill,g_auto,r_max,w_1000/v1604914370/Opus/Team/IMG_1178_hgrzhc.webp" alt="team member icon">
+                        <img 
+                            src="https://res.cloudinary.com/ecx/image/upload/ar_1:1,bo_0px_solid_rgb:ff0000,c_fill,g_auto,r_max,w_1000/v1604914370/Opus/Team/IMG_1178_hgrzhc.webp"
+                            srcset="https://res.cloudinary.com/ecx/image/upload/ar_1:1,bo_0px_solid_rgb:ff0000,c_fill,g_auto,r_max,w_1000/v1604914370/Opus/Team/IMG_1178_hgrzhc.jpg"  
+                            alt="team member icon">
                     </div>
                     <div class="team-member-details">
                         <div class="team-member-info">
@@ -149,7 +167,10 @@
                 </div>
                 <div class="team-member">
                     <div class="member-icon">
-                        <img src="https://res.cloudinary.com/ecx/image/upload/ar_1:1,bo_0px_solid_rgb:ff0000,c_fill,g_auto,q_100,r_max,w_1000,z_2.2/v1604938024/Opus/Team/100989251_248315459936011_7005438596291720856_n_wzv3cs.webp" alt="team member icon">
+                        <img 
+                            src="https://res.cloudinary.com/ecx/image/upload/ar_1:1,bo_0px_solid_rgb:ff0000,c_fill,g_auto,q_100,r_max,w_1000,z_2.2/v1604938024/Opus/Team/100989251_248315459936011_7005438596291720856_n_wzv3cs.webp"
+                            srcset="https://res.cloudinary.com/ecx/image/upload/ar_1:1,bo_0px_solid_rgb:ff0000,c_fill,g_auto,q_100,r_max,w_1000,z_2.2/v1604938024/Opus/Team/100989251_248315459936011_7005438596291720856_n_wzv3cs.jpg"
+                            alt="team member icon">
                     </div>
                     <div class="team-member-details">
                         <div class="team-member-info">
@@ -170,7 +191,10 @@
                 </div>
                 <div class="team-member">
                     <div class="member-icon">
-                        <img src="https://res.cloudinary.com/ecx/image/upload/ar_1:1,c_fill,g_auto,r_max,w_1000/v1604914367/Opus/Team/IMG_6453_q2iueo.webp" alt="team member icon">
+                        <img 
+                            src="https://res.cloudinary.com/ecx/image/upload/ar_1:1,c_fill,g_auto,r_max,w_1000/v1604914367/Opus/Team/IMG_6453_q2iueo.webp"
+                            srcset="https://res.cloudinary.com/ecx/image/upload/ar_1:1,c_fill,g_auto,r_max,w_1000/v1604914367/Opus/Team/IMG_6453_q2iueo.jpg"
+                            alt="team member icon">
                     </div>
                     <div class="team-member-details">
                         <div class="team-member-info">
