--- a/shows.html
+++ b/shows.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The Opus Sessions show is the IGTV series where we dicuss music and try to catch cruise while doing it">
+    <meta name="keywords" content="Opus Sessions, The Opus Sessions show,Opus Sessions, Opus Sessions IGTV">
+    <meta name="author" content="5T4N5">
     <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
