Team img update

--- a/team.html
+++ b/team.html
@@ -91,8 +91,8 @@
                 <div class="team-member">
                     <div class="member-icon">
                         <img 
-                            src="https://res.cloudinary.com/ecx/image/upload/ar_1:1,bo_0px_solid_rgb:ff0000,c_fill,g_auto,r_max,w_1000/v1604914379/Opus/Team/IMG_3080_cfptrs.webp" 
-                            srcset="https://res.cloudinary.com/ecx/image/upload/ar_1:1,bo_0px_solid_rgb:ff0000,c_fill,g_auto,r_max,w_1000/v1604914379/Opus/Team/IMG_3080_cfptrs.jpg" 
+                            src="https://res.cloudinary.com/ecx/image/upload/ar_1:1,c_fill,g_auto,r_max,w_1000/v1605190825/Opus/Team/IMG_4297_j7wtlq.webp" 
+                            srcset="https://res.cloudinary.com/ecx/image/upload/ar_1:1,c_fill,g_auto,r_max,w_1000/v1605190825/Opus/Team/IMG_4297_j7wtlq.jpg" 
                             alt="team member icon">
                     </div>
                     <div class="team-member-details">
