New stuff added

--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
                 <ul>
                     <li class="new-stuff">
                         <div class="new-stuff-details">
+                            <h3 class="title">&#128250; Episode 12</h3>
+                            <p class="description">
+                                Kalimah is a Juice Wrld addict who has very "diverse" playlist and her music taste get as e be. I am sure you'll like her top 10 albums 
+                                (with a few honourable mentions). Pardon our pronunciation, we don too tey for house.
+                            </p>
+                            <a href="https://www.instagram.com/tv/CHi6JY5Da1G/?utm_source=ig_web_button_share_sheet" target="_blank">Watch it >>></a>
+                        </div>
+                        
+                    </li>
+                    <li class="new-stuff">
+                        <div class="new-stuff-details">
                             <h3 class="title">&#127926; Playlists </h3>
                             <p class="description">
                                 The team decided to give us something from their various playlist. These playlists are
