New stuff added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             </nav>
             <div class="hero">
                 <p class="hero-text">
-                    This might end up being the official site for The Opus Sessions. Idk bruh.&#129335;
+                    The Opus Sessions is an album review show with sprinkles of vibes and cruise. 
+                    Let's help you update your playlists with some fire tracks bruhh &#128293; &#128175;
                 </p>
             </div>
         </header>
@@ -43,6 +44,21 @@
             <h2 class="homepage-title">New Stuff &#10024;</h2>
             <section class="new-stuff-list">
                 <ul>
+                    <li class="new-stuff">
+                        <div class="new-stuff-details">
+                            <h3 class="title">&#128250; Episode 13</h3>
+                            <p class="description">
+                                The YoRuBa AnGeL &#128519; (Femi) tells us about his go-to albums. 
+                                A few of them are very foreign to me but I am certain that they are really good. This guy actually loves stressing my life mehn (the filming process no be here my g).
+                                Btw, that was my baby cousin not my kid (I don't have children yet ).
+
+                                Impatient and just want to check out the names of the albums? Check 
+
+                            </p>
+                            <a href="https://www.instagram.com/tv/CH18q_AD7ym/?utm_source=ig_web_button_share_sheet" target="_blank">Watch it >>></a>
+                        </div>
+                        
+                    </li>
                     <li class="new-stuff">
                         <div class="new-stuff-details">
                             <h3 class="title">&#128250; Episode 12</h3>
