More playlists added

--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
                 <ul>
                     <li class="new-stuff">
                         <div class="new-stuff-details">
+                            <h3 class="title">&#127926; Spotify Playlists </h3>
+                            <p class="description">
+                                The playlists from Apple Music have been replicated in Spotify. They are being hosted
+                                on Stanley's Spotify account. Enjoy &#129346; 
+                            </p>
+                            <a href="./playlists.html">Check it out >>></a>
+                        </div>
+                    </li>
+                    <li class="new-stuff">
+                        <div class="new-stuff-details">
                             <h3 class="title">&#128250; Episode 13</h3>
                             <p class="description">
                                 The YoRuBa AnGeL &#128519; (Femi) tells us about his go-to albums. 
