--- a/playlists.html
+++ b/playlists.html
@@ -38,7 +38,10 @@
         <main class="playlists_page">
             <h2 class="playlists_page-title">Playlists</h2>
             <section class="apple-music-playlists">
-                <h3 class="apple-music">&#128241; Apple Music Playlists</h3>
+                <h3 class="apple-music">
+                    <img src="./images/music.svg" class="playlist-icon" alt="playlist icon">
+                    <span>Apple Music Playlists</span> 
+                </h3>
                 <ul>
                     <li class="playlist">
                         <a href="https://music.apple.com/ng/playlist/enjoy/pl.u-EdAVzvGIDmqPREb" class="play-btn">
@@ -108,14 +111,14 @@
                 </ul>
             </section>
             <section class="spotify-music-playlists">
-                <h3 class="spotify-music">&#127925; Spotify Playlists</h3>
+                <h3 class="spotify-music">
+                    <img src="./images/spotify-logo.svg" class="playlist-icon" alt="playlist icon">
+                    <span>Spotify Playlists</span>
+                </h3>
                 <ul>
-                    <i>
-                        Coming soon
-                    </i>
-                    <!-- <li class="playlist">
-                        <a href="https://music.apple.com/ng/playlist/enjoy/pl.u-EdAVzvGIDmqPREb" class="play-btn">
-                            <img src="./images/play-button (1).svg" alt="play button">
+                    <li class="playlist">
+                        <a href="https://open.spotify.com/playlist/2qYA622DDzG5N4eRqqQvFh?si=OU6jVfFASvW1YoiXWRB-jQ&utm_source=copy-link" target="_blank" class="play-btn">
+                            <img src="./images/spotify-play-button.svg" alt="play button">
                         </a>
                         <div class="playlist-details">
                             <h3 class="playlist-name">EnJoY</h3>
@@ -123,8 +126,8 @@
                         </div>
                     </li>
                     <li class="playlist">
-                        <a href="https://music.apple.com/ng/playlist/feels/pl.u-e98lGLqFaovq29A" class="play-btn">
-                            <img src="./images/play-button (1).svg" alt="play button">
+                        <a href="https://open.spotify.com/playlist/7wgQ7oWTA7afu6nzimuQPC?si=cM7zv4tMQvaKkM9mBcTanA&utm_source=copy-link" target="_blank" class="play-btn">
+                            <img src="./images/spotify-play-button.svg" alt="play button">
                         </a>
                         <div class="playlist-details">
                             <h3 class="playlist-name">Feels.</h3>
@@ -132,8 +135,8 @@
                         </div>
                     </li>
                     <li class="playlist">
-                        <a href="https://music.apple.com/ng/playlist/it-hurts/pl.u-xlyNEdWIJ95R7o9" class="play-btn">
-                            <img src="./images/play-button (1).svg" alt="play button">
+                        <a href="https://open.spotify.com/playlist/49AxstssCJB0QRYZxN6w2s?si=3z9xtCy9QaqjUfX7EKyedw&utm_source=copy-link" target="_blank" class="play-btn">
+                            <img src="./images/spotify-play-button.svg" alt="play button">
                         </a>
                         <div class="playlist-details">
                             <h3 class="playlist-name">IT HURTS</h3>
@@ -141,8 +144,8 @@
                         </div>
                     </li>
                     <li class="playlist">
-                        <a href="https://music.apple.com/ng/playlist/nekorbtraeh/pl.u-oZylD0psGDY3X0N" class="play-btn"> 
-                            <img src="./images/play-button (1).svg" alt="play button">
+                        <a href="https://open.spotify.com/playlist/1FvlrP3Z8fA0kYzmBoSkpy?si=F0-CNToTTn-e9UZdjWh5nQ&utm_source=copy-link" target="_blank" class="play-btn"> 
+                            <img src="./images/spotify-play-button.svg" alt="play button">
                         </a>
                         <div class="playlist-details">
                             <h3 class="playlist-name">nekorbtraeh</h3>
@@ -150,8 +153,8 @@
                         </div>
                     </li>
                     <li class="playlist">
-                        <a href="https://music.apple.com/ng/playlist/fleur/pl.u-6mo4zk8cBvzKV5P?ls" class="play-btn">
-                            <img src="./images/play-button (1).svg" alt="play button">
+                        <a href="https://open.spotify.com/playlist/3FIrwfqQM3IkVRg4GNTyTy?si=jAkZqkK9TESXUtL56Lyxug&utm_source=copy-link" target="_blank" class="play-btn">
+                            <img src="./images/spotify-play-button.svg" alt="play button">
                         </a>
                         <div class="playlist-details">
                             <h3 class="playlist-name">Fleur</h3>
@@ -160,8 +163,8 @@
                         
                     </li>
                     <li class="playlist">
-                        <a href="https://music.apple.com/ng/playlist/thissocialanxietyisgettingtome/pl.u-leyl2vLsjKaPveL?ls" class="play-btn">
-                            <img src="./images/play-button (1).svg" alt="play button">
+                        <a href="https://open.spotify.com/playlist/0t8LdDrZzRMPCxDXZaOePI?si=t1lxqNFMQWC_RXZEHJKTcw&utm_source=copy-link" target="_blank" class="play-btn">
+                            <img src="./images/spotify-play-button.svg" alt="play button">
                         </a>
                         <div class="playlist-details">
                             <h3 class="playlist-name">thissocialanxiety...</h3>
@@ -170,14 +173,14 @@
                         
                     </li>
                     <li class="playlist">
-                        <a href="https://music.apple.com/ng/playlist/alternative-and-other-sounds/pl.u-zPyLl35CeLEDv3W" class="play-btn">
-                            <img src="./images/play-button (1).svg" alt="play button">
+                        <a href="https://music.apple.com/ng/playlist/alternative-and-other-sounds/pl.u-zPyLl35CeLEDv3W" target="_blank" class="play-btn">
+                            <img src="./images/spotify-play-button.svg" alt="play button">
                         </a>
                         <div class="playlist-details">
                             <h3 class="playlist-name">Alternative and Other Sounds</h3>
                             <h4 class="playist-owner">by <a href="./team.html">Judith</a></h4>
                         </div>
-                    </li> -->
+                    </li>
                 </ul>
             </section>
         </main>
