New Episode update

--- a/index.html
+++ b/index.html
@@ -46,6 +46,17 @@
                 <ul>
                     <li class="new-stuff">
                         <div class="new-stuff-details">
+                            <h3 class="title">&#128250; Episode 14</h3>
+                            <p class="description">
+                                Apologies for the lengthiness of the video but Judith was spittin facts &#128293;. Her top albums list and her honorable mentions covered a lot of genres and it's lit. 
+                                It might not be the best episode ever but it is pretty entertaining. Hope you like it.
+                            </p>
+                            <a href="https://www.instagram.com/tv/CIGjzShDhsW/?utm_source=ig_web_button_share_sheet" target="_blank">Watch it >>></a>
+                        </div>
+                        
+                    </li>
+                    <li class="new-stuff">
+                        <div class="new-stuff-details">
                             <h3 class="title">&#127926; Spotify Playlists </h3>
                             <p class="description">
                                 The playlists from Apple Music have been replicated in Spotify. They are being hosted
