New stuff added

--- a/playlists.html
+++ b/playlists.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/playlists-styles.css">
+    <!-- <link rel="stylesheet" href="./css/playlists-styles.css"> -->
     <title>The Opus Sessions</title>
 </head>
 <body>
@@ -20,7 +20,11 @@
         <header>
             <nav class="navigation">
                 <a href="./index.html" class="logo">
-                    <p>Opus Sessions</p>
+                    <!-- <p>Opus Sessions</p> -->
+                    <p>
+                        <span><img src="./images/santa-claus.svg" alt="santa O" class="santa-o"/></span>
+                        <span>pus Sessions</span>
+                    </p>
                 </a>
                 <ul class="desktop-menu">
                     <li class="desktop-menu-item"><a href="./index.html">Home</a></li>
@@ -108,6 +112,15 @@
                             <h4 class="playist-owner">by <a href="./team.html">Judith</a></h4>
                         </div>
                     </li>
+                    <li class="playlist">
+                        <a href="https://music.apple.com/ng/playlist/%C4%8D-%C5%82%C5%82%C5%A1/pl.u-76oNlDNIvBXzkmp" class="play-btn">
+                            <img src="./images/play-button (1).svg" alt="play button">
+                        </a>
+                        <div class="playlist-details">
+                            <h3 class="playlist-name">č#¡łłš</h3>
+                            <h4 class="playist-owner">by <a href="./team.html">Christian</a></h4>
+                        </div>
+                    </li>
                 </ul>
             </section>
             <section class="spotify-music-playlists">
@@ -173,12 +186,30 @@
                         
                     </li>
                     <li class="playlist">
-                        <a href="https://music.apple.com/ng/playlist/alternative-and-other-sounds/pl.u-zPyLl35CeLEDv3W" target="_blank" class="play-btn">
+                        <a href="https://open.spotify.com/playlist/2Tj2c4jEDSBIIUd2TRwP06?si=dxEEBsD-TjCW4umMyv5o7g&utm_source=copy-link" target="_blank" class="play-btn">
                             <img src="./images/spotify-play-button.svg" alt="play button">
                         </a>
                         <div class="playlist-details">
                             <h3 class="playlist-name">Alternative and Other Sounds</h3>
                             <h4 class="playist-owner">by <a href="./team.html">Judith</a></h4>
+                        </div>
+                    </li>
+                    <li class="playlist">
+                        <a href="https://open.spotify.com/playlist/6HlN3LuOBpjwu22ARQEO4P?si=RJ-FUtjZSlKkYemewsO5SA&utm_source=copy-link" target="_blank" class="play-btn">
+                            <img src="./images/spotify-play-button.svg" alt="play button">
+                        </a>
+                        <div class="playlist-details">
+                            <h3 class="playlist-name">č#¡łłš</h3>
+                            <h4 class="playist-owner">by <a href="./team.html">Christian</a></h4>
+                        </div>
+                    </li>
+                    <li class="playlist">
+                        <a href="https://open.spotify.com/playlist/3ZqcJa5mFXEIBVsTRf2gve?si=DMNb-rVaRCqmtDpY00SGtA&utm_source=copy-link" target="_blank" class="play-btn">
+                            <img src="./images/spotify-play-button.svg" alt="play button">
+                        </a>
+                        <div class="playlist-details">
+                            <h3 class="playlist-name">The Soft Ones</h3>
+                            <h4 class="playist-owner">by <a href="./team.html">Stanley</a></h4>
                         </div>
                     </li>
                 </ul>
