--- a/shows.html
+++ b/shows.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/shows-styles.css">
+    <!-- <link rel="stylesheet" href="./css/shows-styles.css"> -->
     <title>The Opus Sessions</title>
 </head>
 <body>
@@ -20,7 +20,11 @@
         <header>
             <nav class="navigation">
                 <a href="./index.html" class="logo">
-                    <p>Opus Sessions</p>
+                    <!-- <p>Opus Sessions</p> -->
+                    <p>
+                        <span><img src="./images/santa-claus.svg" alt="santa O" class="santa-o"/></span>
+                        <span>pus Sessions</span>
+                    </p>
                 </a>
                 <ul class="desktop-menu">
                     <li class="desktop-menu-item"><a href="./index.html">Home</a></li>
