--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
         <header>
             <nav class="navigation">
                 <a href="./index.html" class="logo">
-                    <p>Opus Sessions</p>
+                    <!-- <p>Opus Sessions</p> -->
+                    <p>
+                        <span><img src="./images/santa-claus.svg" alt="santa O" class="santa-o"/></span>
+                        <span>pus Sessions</span>
+                    </p>
                 </a>
                 <ul class="desktop-menu">
                     <li class="desktop-menu-item"><a href="./index.html">Home</a></li>
@@ -44,6 +48,16 @@
             <h2 class="homepage-title">New Stuff &#10024;</h2>
             <section class="new-stuff-list">
                 <ul>
+                    <li class="new-stuff">
+                        <div class="new-stuff-details">
+                            <h3 class="title">&#127926; More Playlists </h3>
+                            <p class="description">
+                                Stanley and Christian compiled playlists on Spotify and on Apple Music. Hope you like them &#129346; 
+                            </p>
+                            <a href="./playlists.html">Check it out >>></a>
+                        </div>
+                    </li>
+                    
                     <li class="new-stuff">
                         <div class="new-stuff-details">
                             <h3 class="title">&#128250; Episode 14</h3>
