--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
                 <ul>
                     <li class="new-stuff">
                         <div class="new-stuff-details">
+                            <h3 class="title">&#128250; Episode 15.1: Season finale pt.1</h3>
+                            <p class="description">
+                                The Host (Stanley) for Season 1 finally gets his episode while Christian anchors this episode. 
+                                We get a chance to see his top albums (and his numerous honourable mentions). 
+                                Some of these albums also appear on the top albums of some people on the team.
+                                Enjoy
+                            </p>
+                            <a href="https://www.instagram.com/tv/CI3bwscjAOO/?utm_source=ig_web_button_share_sheet">Watch it >>></a>
+                        </div>
+                    </li>
+                    <li class="new-stuff">
+                        <div class="new-stuff-details">
                             <h3 class="title">&#127926; More Playlists </h3>
                             <p class="description">
                                 Stanley and Christian compiled playlists on Spotify and on Apple Music. Hope you like them &#129346; 
