New stuff added

--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
                 <ul>
                     <li class="new-stuff">
                         <div class="new-stuff-details">
+                            <h3 class="title">&#128250; Episode 15.2: Season finale pt.2</h3>
+                            <p class="description">
+                                The continuation of Episode 15.1 and that's a wrap for the 1st season. The next season will be much better, trust us. Y'all know the vibes. 
+                                Compliments of the season &#127882; &#127876;
+                            </p>
+                            <a href="https://www.instagram.com/tv/CJJc-DvjfsP/?utm_source=ig_web_button_share_sheet">Watch it >>></a>
+                        </div>
+                    </li>
+                    <li class="new-stuff">
+                        <div class="new-stuff-details">
                             <h3 class="title">&#128250; Episode 15.1: Season finale pt.1</h3>
                             <p class="description">
                                 The Host (Stanley) for Season 1 finally gets his episode while Christian anchors this episode. 
