New playlist added

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <header>
             <nav class="navigation">
                 <a href="./index.html" class="logo">
-                    <!-- <p>Opus Sessions</p> -->
-                    <p>
+                    <p>Opus Sessions</p>
+                    <!-- <p>
                         <span><img src="./images/santa-claus.svg" alt="santa O" class="santa-o"/></span>
                         <span>pus Sessions</span>
-                    </p>
+                    </p> -->
                 </a>
                 <ul class="desktop-menu">
                     <li class="desktop-menu-item"><a href="./index.html">Home</a></li>
@@ -48,6 +48,15 @@
             <h2 class="homepage-title">New Stuff &#10024;</h2>
             <section class="new-stuff-list">
                 <ul>
+                    <li class="new-stuff">
+                        <div class="new-stuff-details">
+                            <h3 class="title">&#127926; New Playlist from Christian </h3>
+                            <p class="description">
+                                Christian compiled a soft playlist (č#¡łłš 2) and it is accessible on Apple Music and Spotify
+                            </p>
+                            <a href="./playlists.html">Check it out >>></a>
+                        </div>
+                    </li>
                     <li class="new-stuff">
                         <div class="new-stuff-details">
                             <h3 class="title">&#128250; Episode 15.2: Season finale pt.2</h3>
@@ -79,7 +88,6 @@
                             <a href="./playlists.html">Check it out >>></a>
                         </div>
                     </li>
-                    
                     <li class="new-stuff">
                         <div class="new-stuff-details">
                             <h3 class="title">&#128250; Episode 14</h3>
