--- a/playlists.html
+++ b/playlists.html
@@ -20,11 +20,11 @@
         <header>
             <nav class="navigation">
                 <a href="./index.html" class="logo">
-                    <!-- <p>Opus Sessions</p> -->
-                    <p>
+                    <p>Opus Sessions</p>
+                    <!-- <p>
                         <span><img src="./images/santa-claus.svg" alt="santa O" class="santa-o"/></span>
                         <span>pus Sessions</span>
-                    </p>
+                    </p> -->
                 </a>
                 <ul class="desktop-menu">
                     <li class="desktop-menu-item"><a href="./index.html">Home</a></li>
@@ -121,6 +121,15 @@
                             <h4 class="playist-owner">by <a href="./team.html">Christian</a></h4>
                         </div>
                     </li>
+                    <li class="playlist">
+                        <a href="https://music.apple.com/ng/playlist/%C4%8D-%C5%82%C5%82%C5%A1/pl.u-76oNlDNIvBXzkmp" class="play-btn">
+                            <img src="./images/play-button (1).svg" alt="play button">
+                        </a>
+                        <div class="playlist-details">
+                            <h3 class="playlist-name">č#¡łłš 2</h3>
+                            <h4 class="playist-owner">by <a href="./team.html">Christian</a></h4>
+                        </div>
+                    </li>
                 </ul>
             </section>
             <section class="spotify-music-playlists">
@@ -200,6 +209,15 @@
                         </a>
                         <div class="playlist-details">
                             <h3 class="playlist-name">č#¡łłš</h3>
+                            <h4 class="playist-owner">by <a href="./team.html">Christian</a></h4>
+                        </div>
+                    </li>
+                    <li class="playlist">
+                        <a href="https://open.spotify.com/playlist/6HlN3LuOBpjwu22ARQEO4P?si=RJ-FUtjZSlKkYemewsO5SA&utm_source=copy-link" target="_blank" class="play-btn">
+                            <img src="./images/spotify-play-button.svg" alt="play button">
+                        </a>
+                        <div class="playlist-details">
+                            <h3 class="playlist-name">č#¡łłš 2</h3>
                             <h4 class="playist-owner">by <a href="./team.html">Christian</a></h4>
                         </div>
                     </li>
