--- a/team.html
+++ b/team.html
@@ -20,11 +20,11 @@
         <header>
             <nav class="navigation">
                 <a href="./index.html" class="logo">
-                    <!-- <p>Opus Sessions</p> -->
-                    <p>
+                    <p>Opus Sessions</p>
+                    <!-- <p>
                         <span><img src="./images/santa-claus.svg" alt="santa O" class="santa-o"/></span>
                         <span>pus Sessions</span>
-                    </p>
+                    </p> -->
                 </a>
                 <ul class="desktop-menu">
                     <li class="desktop-menu-item"><a href="./index.html">Home</a></li>
