New stuff added

--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
                 <ul>
                     <li class="new-stuff">
                         <div class="new-stuff-details">
+                            <h3 class="title">&#127926; Another Playlist from Christian (and one from Stanley) </h3>
+                            <p class="description">
+                                In these trying times when vibes don quench, Christian decides to curate something soft (č#¡łłš 3) for us &#128080;. 
+                                Stanley also released a collection of sounds (Various Sounds). Hope y'all like them. 
+                            </p>
+                            <a href="./playlists.html">Check it out >>></a>
+                        </div>
+                    </li>
+                    <li class="new-stuff">
+                        <div class="new-stuff-details">
                             <h3 class="title">&#127926; New Playlist from Christian </h3>
                             <p class="description">
                                 Christian compiled a soft playlist (č#¡łłš 2) and it is accessible on Apple Music and Spotify
