--- a/playlists.html
+++ b/playlists.html
@@ -130,6 +130,15 @@
                             <h4 class="playist-owner">by <a href="./team.html">Christian</a></h4>
                         </div>
                     </li>
+                    <li class="playlist">
+                        <a href="https://music.apple.com/ng/playlist/%C4%8D-%C5%82%C5%82%C5%A1-3/pl.u-76oNlEeIvBXzkmp" class="play-btn">
+                            <img src="./images/play-button (1).svg" alt="play button">
+                        </a>
+                        <div class="playlist-details">
+                            <h3 class="playlist-name">č#¡łłš 3</h3>
+                            <h4 class="playist-owner">by <a href="./team.html">Christian</a></h4>
+                        </div>
+                    </li>
                 </ul>
             </section>
             <section class="spotify-music-playlists">
@@ -227,6 +236,24 @@
                         </a>
                         <div class="playlist-details">
                             <h3 class="playlist-name">The Soft Ones</h3>
+                            <h4 class="playist-owner">by <a href="./team.html">Stanley</a></h4>
+                        </div>
+                    </li>
+                    <li class="playlist">
+                        <a href="https://open.spotify.com/playlist/0Wkx68ZAQo4KllyUJL9wTL?si=IReWE1JyQqG_UAmuwQK3MQ&utm_source=copy-link" target="_blank" class="play-btn">
+                            <img src="./images/spotify-play-button.svg" alt="play button">
+                        </a>
+                        <div class="playlist-details">
+                            <h3 class="playlist-name">č#¡łłš 3</h3>
+                            <h4 class="playist-owner">by <a href="./team.html">Christian</a></h4>
+                        </div>
+                    </li>
+                    <li class="playlist">
+                        <a href="https://open.spotify.com/playlist/0Wkx68ZAQo4KllyUJL9wTL?si=IReWE1JyQqG_UAmuwQK3MQ&utm_source=whatsapp" target="_blank" class="play-btn">
+                            <img src="./images/spotify-play-button.svg" alt="play button">
+                        </a>
+                        <div class="playlist-details">
+                            <h3 class="playlist-name">Various Sounds</h3>
                             <h4 class="playist-owner">by <a href="./team.html">Stanley</a></h4>
                         </div>
                     </li>
