New Playlist added

--- a/playlists.html
+++ b/playlists.html
@@ -139,6 +139,15 @@
                             <h4 class="playist-owner">by <a href="./team.html">Christian</a></h4>
                         </div>
                     </li>
+                    <li class="playlist">
+                        <a href="https://music.apple.com/ng/playlist/let-me-to-introduce-you-to-brent-faiyaz/pl.u-WabZ6BGseqA3kRq" class="play-btn">
+                            <img src="./images/play-button (1).svg" alt="play button">
+                        </a>
+                        <div class="playlist-details">
+                            <h3 class="playlist-name">Let me introduce you to Brent Faiyaz</h3>
+                            <h4 class="playist-owner">by <a href="./team.html">Femi</a></h4>
+                        </div>
+                    </li>
                 </ul>
             </section>
             <section class="spotify-music-playlists">
@@ -255,6 +264,15 @@
                         <div class="playlist-details">
                             <h3 class="playlist-name">Various Sounds</h3>
                             <h4 class="playist-owner">by <a href="./team.html">Stanley</a></h4>
+                        </div>
+                    </li>
+                    <li class="playlist">
+                        <a href="https://open.spotify.com/playlist/49AxstssCJB0QRYZxN6w2s?si=3z9xtCy9QaqjUfX7EKyedw&utm_source=copy-link" target="_blank" class="play-btn">
+                            <img src="./images/spotify-play-button.svg" alt="play button">
+                        </a>
+                        <div class="playlist-details">
+                            <h3 class="playlist-name">Let me introduce you to Brent Faiyaz</h3>
+                            <h4 class="playist-owner">by <a href="./team.html">Femi</a></h4>
                         </div>
                     </li>
                 </ul>
