--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
                 <ul>
                     <li class="new-stuff">
                         <div class="new-stuff-details">
+                            <h3 class="title">&#127926; A Playlist from FemiJohnsn </h3>
+                            <p class="description">
+                                Femi made this playlist for those trying to get into Brent Faiyaz.It's available on Apple Music & Spotify. Enjoy &#128521;.
+                            </p>
+                            <a href="./playlists.html">Check it out >>></a>
+                        </div>
+                    </li>
+                    <li class="new-stuff">
+                        <div class="new-stuff-details">
                             <h3 class="title">&#127926; Another Playlist from Christian (and one from Stanley) </h3>
                             <p class="description">
                                 In these trying times when vibes don quench, Christian decides to curate something soft (č#¡łłš 3) for us &#128080;. 
