--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <div class="new-stuff-details">
                             <h3 class="title">&#127926; A Playlist from FemiJohnsn </h3>
                             <p class="description">
-                                Femi made this playlist for those trying to get into Brent Faiyaz.It's available on Apple Music & Spotify. Enjoy &#128521;.
+                                Femi made this playlist for those trying to get into Brent Faiyaz (Let me introduce you to Brent Faiyaz). It's available on Apple Music & Spotify. Enjoy &#128521;.
                             </p>
                             <a href="./playlists.html">Check it out >>></a>
                         </div>
