New stuff added

--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
                 <ul>
                     <li class="new-stuff">
                         <div class="new-stuff-details">
+                            <h3 class="title">&#128250; Season 2: Episode 0</h3>
+                            <p class="description">
+                                Just a promo video for season 2. We will be back soon.
+                            </p>
+                            <a href="https://www.instagram.com/p/CNDYpFcnik4/?utm_source=ig_web_copy_link">Watch it >>></a>
+                        </div>
+                    </li>
+                    <li class="new-stuff">
+                        <div class="new-stuff-details">
                             <h3 class="title">&#127926; A Playlist from FemiJohnsn </h3>
                             <p class="description">
                                 Femi made this playlist for those trying to get into Brent Faiyaz (Let me introduce you to Brent Faiyaz). It's available on Apple Music & Spotify. Enjoy &#128521;.
