New content added

--- a/playlists.html
+++ b/playlists.html
@@ -20,11 +20,11 @@
         <header>
             <nav class="navigation">
                 <a href="./index.html" class="logo">
-                    <!-- <p>Opus Sessions</p> -->
-                    <p>
+                    <p>Opus Sessions</p>
+                    <!-- <p>
                         <span><img src="./images/santa-claus.svg" alt="santa O" class="santa-o"/></span>
                         <span>pus Sessions</span>
-                    </p>
+                    </p> -->
                 </a>
                 <ul class="desktop-menu">
                     <li class="desktop-menu-item"><a href="./index.html">Home</a></li>
@@ -166,6 +166,15 @@
                             <h4 class="playist-owner">by <a href="./team.html">Femi</a></h4>
                         </div>
                     </li>
+                    <li class="playlist">
+                        <a href="https://music.apple.com/ng/playlist/deserter/pl.u-GgA5eVmUodYqExd" class="play-btn">
+                            <img src="./images/play-button (1).svg" alt="play button">
+                        </a>
+                        <div class="playlist-details">
+                            <h3 class="playlist-name">DESERTER</h3>
+                            <h4 class="playist-owner">by <a href="./team.html">Femi</a></h4>
+                        </div>
+                    </li>
                 </ul>
             </section>
             <section class="spotify-music-playlists">
@@ -290,6 +299,15 @@
                         </a>
                         <div class="playlist-details">
                             <h3 class="playlist-name">Let me introduce you to Brent Faiyaz</h3>
+                            <h4 class="playist-owner">by <a href="./team.html">Femi</a></h4>
+                        </div>
+                    </li>
+                    <li class="playlist">
+                        <a href="https://open.spotify.com/playlist/3brMHjCSJgfjFj5ohQ4Y41?si=j2IndFrFRXeA4WmDA_A3Hg" target="_blank" class="play-btn">
+                            <img src="./images/spotify-play-button.svg" alt="play button">
+                        </a>
+                        <div class="playlist-details">
+                            <h3 class="playlist-name">NEURALINK</h3>
                             <h4 class="playist-owner">by <a href="./team.html">Femi</a></h4>
                         </div>
                     </li>
