--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <header>
             <nav class="navigation">
                 <a href="./index.html" class="logo">
-                    <!-- <p>Opus Sessions</p> -->
-                    <p>
+                    <p>Opus Sessions</p>
+                    <!-- <p>
                         <span><img src="./images/santa-claus.svg" alt="santa O" class="santa-o"/></span>
                         <span>pus Sessions</span>
-                    </p>
+                    </p> -->
                 </a>
                 <ul class="desktop-menu">
                     <li class="desktop-menu-item"><a href="./index.html">Home</a></li>
@@ -48,6 +48,15 @@
             <h2 class="homepage-title">New Stuff &#10024;</h2>
             <section class="new-stuff-list">
                 <ul>
+                    <li class="new-stuff">
+                        <div class="new-stuff-details">
+                            <h3 class="title">&#127926; Playlists from FemiJohnsn </h3>
+                            <p class="description">
+                                Femi made more two playlists [DESERTER & NEURALINK]. DESERTER is available on on Apple Music and NEURALINK is available on Spotify. Enjoy &#128521;.
+                            </p>
+                            <a href="./playlists.html">Check it out >>></a>
+                        </div>
+                    </li>
                     <li class="new-stuff">
                         <div class="new-stuff-details">
                             <h3 class="title">&#127926; Playlists from FemiJohnsn </h3>
