--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <div class="new-stuff-details">
                             <h3 class="title">&#127926; Playlists from FemiJohnsn </h3>
                             <p class="description">
-                                Femi made more two playlists [DESERTER & NEURALINK]. DESERTER is available on on Apple Music and NEURALINK is available on Spotify. Enjoy &#128521;.
+                                Femi made two more playlists [DESERTER & NEURALINK]. DESERTER is available on on Apple Music and NEURALINK is available on Spotify. Enjoy &#128521;.
                             </p>
                             <a href="./playlists.html">Check it out >>></a>
                         </div>
